fix: get definition method